# cafe

./: README
src/cashier/: CMakeLists.txt  base_cashier_f.cpp  base_cashier_f.h  cashier.rc  cashierApp.cpp  cashierApp.h  cashier_f.cpp  cashier_f.h  cashier_lang.xml  version.cpp  wx_cashier_f.fbp
src/cashierw/: CMakeLists.txt  base_main_f.cpp  base_main_f.h  cashierw.rc  cashierwApp.cpp  cashierwApp.h  main_f.cpp  main_f.h  version.cpp  wx_main_f.fbp
src/dbsync/: CMakeLists.txt  MemoOutPut.cpp  MemoOutPut.h  config  dbsync.cpp  sync.cpp  sync.h  version.cpp
src/hr/: CMakeLists.txt  HR_f.cpp  HR_f.h  HR_ico.cpp  HR_ico.h  HR_users.cpp  HR_users.h  HRgrid_f.cpp  HRgrid_f.h  HRpos_f.cpp  HRpos_f.h  application_register.cpp  application_register.hpp  auth_f.cpp  auth_f.h  base_HR_f.cpp  base_HR_f.h  base_auth_f.cpp  base_auth_f.h  base_connect.cpp  base_connect.hpp  base_person_f.cpp  base_person_f.h  base_position_f.cpp  base_position_f.h  base_property_f.cpp  base_property_f.h  base_text_f.cpp  base_text_f.h  dialog_f.cpp  dialog_f.h  hr_manager_lang.xml  hrmanager.rc  main.cpp  main.h  mcard.cpp  mcard.h  person_f.cpp  person_f.h  position_f.cpp  (+14 more)
src/kitchen_informer/: CMakeLists.txt  kitchen_informer.sh  main.cpp  sync.cpp  sync.hpp  version.cpp
src/logo_manager/: CMakeLists.txt  base_lm_f.cpp  base_lm_f.h  base_options_f.cpp  base_options_f.h  lmApp.cpp  lmApp.h  lm_f.cpp  lm_f.h  options_f.cpp  options_f.h  version.cpp  wx_logo_manager_f.fbp  wx_options_f.fbp
src/print_server/: CMakeLists.txt  main.cpp  print_server.xml  version.cpp
src/shared/: gen_barcode.cpp  gen_barcode.h  ksi_exception.hpp  xml_config.cpp  xml_config.hpp
src/shared/cmake_modules/: fiscal.cmake  libdb.cmake  libpos.cmake  miracle.cmake  order.cmake  printer.cmake  report.cmake  reportviewer.cmake  serial.cmake  tinyxml.cmake  treelistctrl.cmake  vfd_display.cmake
src/shared/db/: CMakeLists.txt  oracle_driver.cpp  oracle_driver.h
src/shared/drawer/: drawer.cpp  drawer.hpp
src/shared/fiscal_register/: CMakeLists.txt  fiscal.cpp  fiscal.hpp  fiscal_exception.hpp  strerror.cpp  strerror.hpp
src/shared/ksi_include/: algo_functor.hpp  custom_treelistctrl.hpp  ksi_exceptions.hpp  monitor.hpp  thread_pulse.hpp  wx_tree_node.hpp
src/shared/ksi_kitchen/: kitchen_util.cpp  kitchen_util.hpp  sync.cpp  sync.hpp
src/shared/ksi_libdb/: CMakeLists.txt  oracle.cc  oracle.hpp  oracle_driver.cpp  oracle_driver.h  oracle_driver_stub.cc  postgres.cc  postgres.hh  python_wrapper.cc  test.cc
src/shared/ksi_libdb_new/: CMakeLists.txt  bind_datatypes.hh  database_exception.hpp  datatypes.cc  datatypes.hh  oci_adapter.cc  oci_adapter.hh  oci_attributes.hh  oci_handles.cc  oci_handles.hh  oci_lob.cc  oci_lob.hh  oci_op.cc  oci_op.hh  oracle.cc  oracle.hh  session_context.hh  test.cc
src/shared/ksi_libpos/: CMakeLists.txt  pos.cpp  pos.hpp
src/shared/ksi_order/: CMakeLists.txt  cafe_container.cpp  cafe_container.hpp  cctrans_manager.cpp  cctrans_manager.hpp  coupon.cpp  coupon.hpp  credit_card.cpp  credit_card.hpp  delivery_info.cpp  delivery_info.hpp  menu_container.cpp  menu_container.hpp  menu_interface.cpp  menu_interface.hpp  order_interface.cpp  order_interface.hpp  order_payment.cpp  order_payment.hpp  schedule_container.cpp  schedule_container.hpp
src/shared/ksi_util/: application_register.cpp  application_register.hpp  bag_spooler.cpp  bag_spooler.hpp  cash_advance.cpp  cash_advance.hpp  currency.cpp  currency.hpp  date_time.cpp  date_time.hpp  format.cpp  format.hpp  inet.cpp  inet.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  reg.cpp  reg.hpp  url.cpp  url.hpp  users.cpp  users.hpp  util.cpp  util.hpp  xml_config.cpp  xml_config.hpp
src/shared/lang/: rus_locale.xml  xml_lang.cpp  xml_lang.h
src/shared/miracle/: CMakeLists.txt  convert.cpp  convert.hpp
src/shared/oracle_client/: ksi_common.hpp  ksi_exception.hpp  oracle_client.hpp
src/shared/printer/: CMakeLists.txt  logo_maker.cpp  logo_maker.hpp  printer.cpp  printer.hpp  xml_check_printer.cpp  xml_check_printer.hpp
src/shared/serial/: CMakeLists.txt  com.cpp  com.hpp
src/shared/shared_modules/: add_modifiers_f.cpp  add_modifiers_f.h  advance_f.cpp  advance_f.h  auth_f.cpp  auth_f.h  base_add_modifiers_f.cpp  base_add_modifiers_f.h  base_advance_f.cpp  base_advance_f.h  base_auth_f.cpp  base_auth_f.h  base_btn_list_f.cpp  base_btn_list_f.h  base_calc_f.cpp  base_calc_f.h  base_card_swipe_f.cpp  base_card_swipe_f.h  base_cashier_f.cpp  base_cashier_f.h  base_close_order_manager_f.cpp  base_close_order_manager_f.h  base_config_f.cpp  base_config_f.h  base_count_f.cpp  base_count_f.h  base_coupon_calc_f.cpp  base_coupon_calc_f.h  base_delayed_order_f.cpp  base_delayed_order_f.h  base_dlg_f.cpp  base_dlg_f.h  base_info_f.cpp  base_info_f.h  base_input_num_f.cpp  base_input_num_f.h  base_load_f.cpp  base_load_f.h  base_manual_entry_f.cpp  base_manual_entry_f.h  (+97 more)
src/shared/tinyxml/: CMakeLists.txt
src/shared/vfd_display/: CMakeLists.txt  customer_display.cpp  customer_display.hpp
src/shared/wx_report/: repwrt.cpp  repwrt.h
src/shared/wx_report/reportgen/: CMakeLists.txt
src/shared/wx_report/reportgen/include/: wxMaskController.h  wxReport.h  wxReportFiller.h  wxReportWriter.h  xmlex.h
src/shared/wx_report/reportgen/src/: wxMaskController.cpp  wxReport.cpp  wxReportFiller.cpp  wxReportWriter.cpp
src/shared/wx_report/reportvwr/: CMakeLists.txt
src/shared/wx_report/reportvwr/include/: wxReportViewer.h
src/shared/wx_report/reportvwr/src/: wxReportViewer.cpp
src/shared/wx_util/: credit_utils.cpp  credit_utils.hpp  move_up.cpp  move_up.hpp  order_show.cpp  order_show.hpp  wx_util.cpp  wx_util.hpp  xml_config.cpp
src/shared/wx_util/treelistctrl/: CMakeLists.txt  treelistctrl.cpp  treelistctrl.h
web-face/: index.php  test.php
web-face/administrator/: index.php
web-face/common/: class_datepicker.php  class_rtree.php  const.php  functions.php  lang.php  login.php  template.php  template_dtl.php
web-face/diag/: index.php
web-face/menumanager/: index.php
web-face/recipebuilder/: index.php
(+63 files in other folders)
